--- a/app/src/main/res/xml/alpha_layout.xml
+++ b/app/src/main/res/xml/alpha_layout.xml
@@ -29,7 +29,7 @@
 
     </Row>
     <Row>
-        <Key android:codes="-4, -5, -6" android:keyLabel=" " android:keyWidth="15%p" android:keyEdgeFlags="left"/>
+        <Key android:codes="-2" android:keyLabel=" " android:keyWidth="15%p" android:keyEdgeFlags="left" android:isModifier="true"/>
         <Key android:codes="122" android:keyLabel="z" android:keyWidth="10%p"/>
         <Key android:codes="120" android:keyLabel="x" android:keyWidth="10%p"/>
         <Key android:codes="99" android:keyLabel="c" android:keyWidth="10%p"/>
@@ -37,11 +37,11 @@
         <Key android:codes="98" android:keyLabel="b" android:keyWidth="10%p"/>
         <Key android:codes="110" android:keyLabel="n" android:keyWidth="10%p"/>
         <Key android:codes="109" android:keyLabel="m" android:keyWidth="10%p"/>
-        <Key android:codes="-2" android:keyLabel="DEL" android:keyWidth="15%p" android:isRepeatable="true" android:keyEdgeFlags="right"/>
+        <Key android:codes="-5" android:keyLabel="DEL" android:keyWidth="15%p" android:isRepeatable="true" android:keyEdgeFlags="right"/>
     </Row>
     <Row android:rowEdgeFlags="bottom">
         <Key android:codes="-9" android:keyIcon="@drawable/key_emoji" android:keyWidth="12%p" android:keyEdgeFlags="left"/>
-        <Key android:codes="-8" android:keyLabel="\?123" android:keyWidth="13%p" />
+        <Key android:codes="-6" android:keyLabel="\?123" android:keyWidth="13%p" />
         <Key android:codes="32" android:keyIcon="@drawable/key_spacebar" android:keyWidth="50%p" android:isRepeatable="true"/>
         <Key android:codes="46,44,8230" android:keyLabel=". ," android:keyWidth="13%p"/>
         <Key android:codes="-1" android:keyIcon="@drawable/key_return" android:keyWidth="12%p" android:keyEdgeFlags="right"/>
