--- a/app/src/main/res/xml/symbol_layout.xml
+++ b/app/src/main/res/xml/symbol_layout.xml
@@ -29,7 +29,7 @@
 
     </Row>
     <Row>
-        <Key android:codes="-3" android:keyLabel="ALT" android:keyWidth="15%p" android:keyEdgeFlags="left"/>
+        <Key android:codes="-8" android:keyLabel="ALT" android:keyWidth="15%p" android:keyEdgeFlags="left"/>
         <Key android:codes="42" android:keyLabel="*" android:keyWidth="10%p"/>
         <Key android:codes="34" android:keyLabel='"' android:keyWidth="10%p"/>
         <Key android:codes="39" android:keyLabel="'" android:keyWidth="10%p"/>
@@ -37,13 +37,13 @@
         <Key android:codes="59" android:keyLabel=";" android:keyWidth="10%p"/>
         <Key android:codes="33" android:keyLabel="!" android:keyWidth="10%p"/>
         <Key android:codes="63" android:keyLabel="\?" android:keyWidth="10%p"/>
-        <Key android:codes="-2" android:keyLabel="DEL" android:keyWidth="15%p" android:isRepeatable="true"/>
+        <Key android:codes="-5" android:keyLabel="DEL" android:keyWidth="15%p" android:isRepeatable="true"/>
     </Row>
     <Row android:rowEdgeFlags="bottom">
         <Key android:codes="-7" android:keyIcon="@drawable/key_alpha" android:keyWidth="12%p" android:keyEdgeFlags="left"/>
         <Key android:codes="47" android:keyLabel="/" android:keyWidth="13%p" />
         <Key android:codes="32" android:keyIcon="@drawable/key_spacebar" android:keyWidth="50%p" android:isRepeatable="true"/>
-        <Key android:codes="46,44,8230" android:keyLabel=", ." android:keyWidth="13%p"/>
+        <Key android:codes="46,44,8230" android:keyLabel=". ," android:keyWidth="13%p"/>
         <Key android:codes="-1" android:keyIcon="@drawable/key_return" android:keyWidth="12%p" android:keyEdgeFlags="right"/>
     </Row>
 </Keyboard>
